--- a/choreopop.html
+++ b/choreopop.html
@@ -16,7 +16,9 @@
     <!-- CSS style.css-->
     <link rel="stylesheet" href="style.css" type="text/css" >
     <title>deVega matrix</title>
-
+    <!-- Favicon icon -->
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    
     </head>
 
 
