--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
     <!-- CSS style.css-->
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>deVega matrix</title>
+    <!-- Favicon icon -->
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
 </head>
 
@@ -25,89 +27,109 @@
     <!-- Navigation bar -->
     <header>
         <!-- Logo -->
-        
+
         <!-- Menu -->
-        <header>
-            <!-- Home -->
-            <section>
-                <!-- Title -->
-                <div class="titel-container">
-                    <h1>Actual</h1>
-                </div>
-                <!-- Carousel-->
-            </section>
-            <!-- Divider 1 -->
-            <div class="divider-container">
-                <div class="quotation">
-                </div>
-                <div class="reference">
-                </div>
-            </div>
-            <!-- Gallery -->
-            <section>
-                <!-- Title -->
-                <div class="titel-container">
-                    <h1>Gallery</h1>
-                </div>
-                <!-- Content -->
-            </section>
-            <!-- Divider 2 -->
-            <div class="divider-container">
-                <div class="quotation">
-                </div>
-                <div class="reference">
-                </div>
-            </div>
-            <!-- Archive -->
-            <section>
-                <!-- Title -->
-                <div class="titel-container">
-                    <h1>Archive</h1>
-                </div>
-                <!-- Carousel-->
-            </section>
-            <!-- Divider 3 -->
-            <div class="divider-container">
-                <div class="quotation">
-                </div>
-                <div class="reference">
-                </div>
-            </div>
-            <!-- About -->
-            <section>
-                <!-- Title -->
-                <div class="titel-container">
-                    <h1>About</h1>
-                </div>
-                <!-- Content-->
-            </section>
-            <!-- Divider 4 -->
-            <div class="divider-container">
-                <div class="quotation">
-                </div>
-                <div class="reference">
-                    <p>Dance your way to the future</p>
-                </div>
-            </div>
-            <!-- Contact -->
-            <section>
-                <!-- Title -->
-                <div class="titel-container">
-                    <h1>Contact</h1>
-                </div>
-                <!-- Content-->
-                <!-- Contact form -->
-            </section>
+    </header>
+    <!-- Home -->
+    <section>
+        <!-- Title -->
+        <div class="titel-container">
+            <h1>Actual</h1>
+        </div>
+        <!-- Carousel-->
+    </section>
+    <!-- Divider 1 -->
+    <div class="divider-container">
+        <div class="quotation">
+        </div>
+        <div class="reference">
+        </div>
+    </div>
+    <!-- Gallery -->
+    <section>
+        <!-- Title -->
+        <div class="titel-container">
+            <h1>Gallery</h1>
+        </div>
+        <!-- Content -->
+    </section>
+    <!-- Divider 2 -->
+    <div class="divider-container">
+        <div class="quotation">
+        </div>
+        <div class="reference">
+        </div>
+    </div>
+    <!-- Archive -->
+    <section>
+        <!-- Title -->
+        <div class="titel-container">
+            <h1>Archive</h1>
+        </div>
+        <!-- Carousel-->
+    </section>
+    <!-- Divider 3 -->
+    <div class="divider-container">
+        <div class="quotation">
+        </div>
+        <div class="reference">
+        </div>
+    </div>
+    <!-- About -->
+    <section>
+        <!-- Title -->
+        <div class="titel-container">
+            <h1>About</h1>
+        </div>
+        <!-- Content-->
+    .about-text
+        <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.
+            <br>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN MUSIC
+            PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL BALANCE ENCOMPASSING
+            THE FREEDOM AND THE DYNAMICS OF A CONCERT WITH THE (HIDDEN) PRECISION OF A CHOREOGRAPHED PIECE.
+            <br>I CONSIDER MY WORK TO BE ATMOSPHERIC AND IMMERSIVE. I CREATE PHYSICAL, VISUAL AND AURAL LANDSCAPES, LIKE A
+            COLLECTION OF MOODS THAT REFLECT CURRENT SOCIO-POLITICAL ISSUES WITH SOME REFERENCES TO ART AND/OR POP
+            CULTURE ADDED TO THE MIX.
+            <br>IN PREPARATION FOR MY UPCOMING WORK (STILL UNTITLED), AND CONTINUING THE PATH OPENED BY MY LATEST PIECE
+            CHOREOPOP, I AM DEVELOPING A CREATIVE AND SCORING METHOD (CALLED MUSICOGRAPHY) THAT WILL SERVE AS THE
+            GENERATOR FOR PHYSICAL/AURAL OUTCOMES.
+            <br>IN 2012/13 I PARTICIPATED IN SPAZIO, A EUROPEAN PROGRAMME FOR DANCE MAKERS. CURRENTLY I AM A SUPPORTED
+            ARTIST AT ICK AND DANSMAKERS, BOTH LOCATED IN AMSTERDAM.
+            <br>AS A DANCER I HAVE WORKED WITH COMPANIES AND CHOREOGRAPHERS SUCH AS ICK, GALILI DANCE, ICELAND DANCE
+            COMPANY, METROS, STEPHEN SHROPSHIRE, ANDRÉ GINGRAS, SYLVAIN EMARD AND VACLAV KUNES AMONGST OTHERS. I WORK AS
+            WELL AS DANCE TEACHER/COACH, GIVING WORKSHOPS OR IMPARTING CLASSES FOR INSTITUTIONS LIKE FONTYS, AHK, ARTEZ,
+            CODARTS, NORRDANS, ICK, HJS, AKBANK SANAT (TURKEY), NSCD (LEEDS), CAD (SEVILLE)… JUST TO NAME A FEW.
+            <br>MY WORK HAS TOURED ACROSS HOLLAND AND HAS BEEN PROGRAMMED IN THEATRES LIKE FRASCATI, MEERVAART, BELLEVUE,
+            KORZO, NWE VORST, GRAND THEATRE, PARKTHEATRE… TO NAME A FEW.IT HAS ALSO BEEN SHOWN AT DUTCH FESTIVALS LIKE
+            MUNDIAL, NAZOMERFESTIVAAL, BOULEVARD FESTIVAL OR THE NEDERLANDSE DANSDAGEN AMONGST OTHERS. INTERNATIONALLY,
+            I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.
+            <br>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS). </p>
+    </section>
+    <!-- Divider 4 -->
+    <div class="divider-container">
+        <div class="quotation">
+        </div>
+        <div class="reference">
+            <p>Dance your way to the future</p>
+        </div>
+    </div>
+    <!-- Contact -->
+    <section>
+        <!-- Title -->
+        <div class="titel-container">
+            <h1>Contact</h1>
+        </div>
+        <!-- Content-->
+        <!-- Contact form -->
+    </section>
 
-            <!-- Footer -->
+    <!-- Footer -->
 
-            <div class="footer-container">
-                <div class="social-links">
+    <div class="footer-container">
+        <div class="social-links">
 
-                </div>
-            </div>
-
-
+        </div>
+    </div>
 
 
 
@@ -118,19 +140,18 @@
 
 
 
-            <!-- JavaScript -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                crossorigin="anonymous">
-            </script>
+
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
