--- a/home.html
+++ b/home.html
@@ -76,35 +76,59 @@
         </div>
     </div>
     <!-- About -->
-    <section>
-        <!-- Title -->
-        <div class="titel-container">
-            <h1>About</h1>
-        </div>
-        <!-- Content-->
-    .about-text
-        <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.
-            <br>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN MUSIC
-            PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL BALANCE ENCOMPASSING
-            THE FREEDOM AND THE DYNAMICS OF A CONCERT WITH THE (HIDDEN) PRECISION OF A CHOREOGRAPHED PIECE.
-            <br>I CONSIDER MY WORK TO BE ATMOSPHERIC AND IMMERSIVE. I CREATE PHYSICAL, VISUAL AND AURAL LANDSCAPES, LIKE A
-            COLLECTION OF MOODS THAT REFLECT CURRENT SOCIO-POLITICAL ISSUES WITH SOME REFERENCES TO ART AND/OR POP
-            CULTURE ADDED TO THE MIX.
-            <br>IN PREPARATION FOR MY UPCOMING WORK (STILL UNTITLED), AND CONTINUING THE PATH OPENED BY MY LATEST PIECE
-            CHOREOPOP, I AM DEVELOPING A CREATIVE AND SCORING METHOD (CALLED MUSICOGRAPHY) THAT WILL SERVE AS THE
-            GENERATOR FOR PHYSICAL/AURAL OUTCOMES.
-            <br>IN 2012/13 I PARTICIPATED IN SPAZIO, A EUROPEAN PROGRAMME FOR DANCE MAKERS. CURRENTLY I AM A SUPPORTED
-            ARTIST AT ICK AND DANSMAKERS, BOTH LOCATED IN AMSTERDAM.
-            <br>AS A DANCER I HAVE WORKED WITH COMPANIES AND CHOREOGRAPHERS SUCH AS ICK, GALILI DANCE, ICELAND DANCE
-            COMPANY, METROS, STEPHEN SHROPSHIRE, ANDRÉ GINGRAS, SYLVAIN EMARD AND VACLAV KUNES AMONGST OTHERS. I WORK AS
-            WELL AS DANCE TEACHER/COACH, GIVING WORKSHOPS OR IMPARTING CLASSES FOR INSTITUTIONS LIKE FONTYS, AHK, ARTEZ,
-            CODARTS, NORRDANS, ICK, HJS, AKBANK SANAT (TURKEY), NSCD (LEEDS), CAD (SEVILLE)… JUST TO NAME A FEW.
-            <br>MY WORK HAS TOURED ACROSS HOLLAND AND HAS BEEN PROGRAMMED IN THEATRES LIKE FRASCATI, MEERVAART, BELLEVUE,
-            KORZO, NWE VORST, GRAND THEATRE, PARKTHEATRE… TO NAME A FEW.IT HAS ALSO BEEN SHOWN AT DUTCH FESTIVALS LIKE
-            MUNDIAL, NAZOMERFESTIVAAL, BOULEVARD FESTIVAL OR THE NEDERLANDSE DANSDAGEN AMONGST OTHERS. INTERNATIONALLY,
-            I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.
-            <br>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS). </p>
-    </section>
+    <div id="section4">
+        <section>
+            <!-- Title -->
+            <div class="titel-container">
+                <h1>About</h1>
+            </div>
+            <!-- Content-->
+            <div class="about-text-container">
+                <div class="about-text-content">
+                    <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.</p>
+                    <p>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN MUSIC
+                        PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL BALANCE
+                        ENCOMPASSING
+                        THE FREEDOM AND THE DYNAMICS OF A CONCERT WITH THE (HIDDEN) PRECISION OF A CHOREOGRAPHED PIECE.
+                    </p>
+                    <p>I CONSIDER MY WORK TO BE ATMOSPHERIC AND IMMERSIVE. I CREATE PHYSICAL, VISUAL AND AURAL
+                        LANDSCAPES,
+                        LIKE A
+                        COLLECTION OF MOODS THAT REFLECT CURRENT SOCIO-POLITICAL ISSUES WITH SOME REFERENCES TO ART
+                        AND/OR
+                        POP
+                        CULTURE ADDED TO THE MIX.</p>
+                    <p>IN PREPARATION FOR MY UPCOMING WORK (STILL UNTITLED), AND CONTINUING THE PATH OPENED BY MY LATEST
+                        PIECE
+                        CHOREOPOP, I AM DEVELOPING A CREATIVE AND SCORING METHOD (CALLED MUSICOGRAPHY) THAT WILL SERVE
+                        AS
+                        THE
+                        GENERATOR FOR PHYSICAL/AURAL OUTCOMES.</p>
+                    <p>IN 2012/13 I PARTICIPATED IN SPAZIO, A EUROPEAN PROGRAMME FOR DANCE MAKERS. CURRENTLY I AM A
+                        SUPPORTED
+                        ARTIST AT ICK AND DANSMAKERS, BOTH LOCATED IN AMSTERDAM.</p>
+                    <p>AS A DANCER I HAVE WORKED WITH COMPANIES AND CHOREOGRAPHERS SUCH AS ICK, GALILI DANCE, ICELAND
+                        DANCE
+                        COMPANY, METROS, STEPHEN SHROPSHIRE, ANDRÉ GINGRAS, SYLVAIN EMARD AND VACLAV KUNES AMONGST
+                        OTHERS. I
+                        WORK AS
+                        WELL AS DANCE TEACHER/COACH, GIVING WORKSHOPS OR IMPARTING CLASSES FOR INSTITUTIONS LIKE FONTYS,
+                        AHK, ARTEZ,
+                        CODARTS, NORRDANS, ICK, HJS, AKBANK SANAT (TURKEY), NSCD (LEEDS), CAD (SEVILLE)… JUST TO NAME A
+                        FEW.
+                    </p>
+                    <p>MY WORK HAS TOURED ACROSS HOLLAND AND HAS BEEN PROGRAMMED IN THEATRES LIKE FRASCATI, MEERVAART,
+                        BELLEVUE,
+                        KORZO, NWE VORST, GRAND THEATRE, PARKTHEATRE… TO NAME A FEW. IT HAS ALSO BEEN SHOWN AT DUTCH
+                        FESTIVALS LIKE
+                        MUNDIAL, NAZOMERFESTIVAAL, BOULEVARD FESTIVAL OR THE NEDERLANDSE DANSDAGEN AMONGST OTHERS.
+                        INTERNATIONALLY,
+                        I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.</p>
+                    <p>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS). </p>
+                </div>
+            </div>
+        </section>
+    </div>
     <!-- Divider 4 -->
     <div class="divider-container">
         <div class="quotation">
