--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Fontawesome CSS-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <!-- Google Fonts CSS-->
-    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Julius+Sans+One:|Montserrat:100,200,400,600,800|Source+Code+Pro:200,300,400,500,700,900&display=swap"
+        rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <title>deVega matrix</title>
     <!-- Favicon icon -->
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
@@ -24,6 +26,33 @@
 
 
 <body>
+
+    <div class="video-container">
+        <video id="videoIntro" autoplay muted loop>
+            <source src="assets/video/intro.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="container-fluid">
+        <div class="row no-gutters">
+            <div class="col-12 text-center logo-container">
+                    <button type="button" class="btn btn-link hvr-fade" id="logo-button">JESUS DE VEGA</button>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid entry-container">
+        <div class="row no-gutters">
+            <div class="col-12 col-md-4 text-center art-container">
+                <button type="button" class="btn btn-link" id="entry-art">MY ART</button>
+            </div>
+            <div class="col-12 col-md-4 text-center and-container">
+                <h1 class="display-1" id="and-sign">&</h1>
+            </div>
+            <div class="col-12 col-md-4 text-center business-container">
+                <button type="button" class="btn btn-link" id="entry-business">BUSINESS</button>
+            </div>
+        </div>
+    </div>
+
 
 
 
