--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <body>
-
+<div class="background-container">
     <div class="video-container">
         <video id="videoIntro" autoplay muted loop>
             <source src="assets/video/intro.mp4" type="video/mp4">
@@ -35,24 +35,24 @@
     <div class="container-fluid">
         <div class="row no-gutters">
             <div class="col-12 text-center logo-container">
-                    <button type="button" class="btn btn-link hvr-fade" id="logo-button">JESUS DE VEGA</button>
+                <a class="btn btn-link logo" id="logo-button" href="index.html">JESUS DE VEGA</a>
             </div>
         </div>
     </div>
     <div class="container-fluid entry-container">
         <div class="row no-gutters">
             <div class="col-12 col-md-4 text-center art-container">
-                <button type="button" class="btn btn-link" id="entry-art">MY ART</button>
+                <a  class="btn btn-link" id="entry-art" href="home.html">MY ART</a>
             </div>
             <div class="col-12 col-md-4 text-center and-container">
                 <h1 class="display-1" id="and-sign">&</h1>
             </div>
             <div class="col-12 col-md-4 text-center business-container">
-                <button type="button" class="btn btn-link" id="entry-business">BUSINESS</button>
+                <a class="btn btn-link" id="entry-business" href="business.html">BUSINESS</a>
             </div>
         </div>
     </div>
-
+</div>
 
 
 
