--- a/home.html
+++ b/home.html
@@ -24,11 +24,17 @@
 
 
 <body>
+
     <!-- Navigation bar -->
-    <header>
+    <header class="nav-area">
+        <div class="navWrapper">
+            <nav class="navbar navbar-expand-md navbar-light bg"></nav>
+
+       
         <!-- Logo -->
 
         <!-- Menu -->
+    </div>
     </header>
     <!-- Home -->
     <section>
