index background color

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <!-- Navigation bar -->
     <header class="nav-area">
         <div class="navWrapper">
-            <nav class="navbar navbar-expand-md navbar-light bg"></nav>
+            <nav class="navbar navbar-expand-md navbar-dark bg-"></nav>
 
        
         <!-- Logo -->
@@ -82,15 +82,21 @@
         </div>
     </div>
     <!-- About -->
-    <div id="section4">
-        <section>
+    <div id="about">
+        <section class="aboutWrapper">
             <!-- Title -->
-            <div class="titel-container">
-                <h1>About</h1>
+            <div class="container-fluid about-container">
+                    <div class="row justify-content-center">
+            <div class="col-12 pb-30 text-center title">
+                <h1>ABOUT</h1>
             </div>
+        </div>
+    </div>
             <!-- Content-->
-            <div class="about-text-container">
-                <div class="about-text-content">
+
+            <div class="container-fluid about-text-container">
+                <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-xl-6 text-center about-text-content">
                     <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.</p>
                     <p>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN MUSIC
                         PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL BALANCE
@@ -131,6 +137,8 @@
                         INTERNATIONALLY,
                         I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.</p>
                     <p>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS). </p>
+                </div>
+
                 </div>
             </div>
         </section>
