--- a/home.html
+++ b/home.html
@@ -30,11 +30,11 @@
         <div class="navWrapper">
             <nav class="navbar navbar-expand-md navbar-dark bg-"></nav>
 
-       
-        <!-- Logo -->
 
-        <!-- Menu -->
-    </div>
+            <!-- Logo -->
+
+            <!-- Menu -->
+        </div>
     </header>
     <!-- Home -->
     <section>
@@ -82,67 +82,86 @@
         </div>
     </div>
     <!-- About -->
-    <div id="about">
-        <section class="aboutWrapper">
+    <section class="about">
+        <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-xl-8 about" id="aboutPlx">
+        <div class="aboutWrapper">
+            <!--<img src="assets/images/maskoff.jpg" class="img-fluid" id="maskoff" alt="responsive image">-->
             <!-- Title -->
             <div class="container-fluid about-container">
-                    <div class="row justify-content-center">
-            <div class="col-12 pb-30 text-center title">
-                <h1>ABOUT</h1>
+                <div class="row aboutTop">
+                    <div class="col-12"></div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 pt-30 text-center title">
+                        <h1>ABOUT</h1>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="col-12 aboutUnder"></div>
+                    </div>
             </div>
-        </div>
-    </div>
             <!-- Content-->
 
             <div class="container-fluid about-text-container">
                 <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-xl-6 text-center about-text-content">
-                    <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.</p>
-                    <p>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN MUSIC
-                        PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL BALANCE
-                        ENCOMPASSING
-                        THE FREEDOM AND THE DYNAMICS OF A CONCERT WITH THE (HIDDEN) PRECISION OF A CHOREOGRAPHED PIECE.
-                    </p>
-                    <p>I CONSIDER MY WORK TO BE ATMOSPHERIC AND IMMERSIVE. I CREATE PHYSICAL, VISUAL AND AURAL
-                        LANDSCAPES,
-                        LIKE A
-                        COLLECTION OF MOODS THAT REFLECT CURRENT SOCIO-POLITICAL ISSUES WITH SOME REFERENCES TO ART
-                        AND/OR
-                        POP
-                        CULTURE ADDED TO THE MIX.</p>
-                    <p>IN PREPARATION FOR MY UPCOMING WORK (STILL UNTITLED), AND CONTINUING THE PATH OPENED BY MY LATEST
-                        PIECE
-                        CHOREOPOP, I AM DEVELOPING A CREATIVE AND SCORING METHOD (CALLED MUSICOGRAPHY) THAT WILL SERVE
-                        AS
-                        THE
-                        GENERATOR FOR PHYSICAL/AURAL OUTCOMES.</p>
-                    <p>IN 2012/13 I PARTICIPATED IN SPAZIO, A EUROPEAN PROGRAMME FOR DANCE MAKERS. CURRENTLY I AM A
-                        SUPPORTED
-                        ARTIST AT ICK AND DANSMAKERS, BOTH LOCATED IN AMSTERDAM.</p>
-                    <p>AS A DANCER I HAVE WORKED WITH COMPANIES AND CHOREOGRAPHERS SUCH AS ICK, GALILI DANCE, ICELAND
-                        DANCE
-                        COMPANY, METROS, STEPHEN SHROPSHIRE, ANDRÉ GINGRAS, SYLVAIN EMARD AND VACLAV KUNES AMONGST
-                        OTHERS. I
-                        WORK AS
-                        WELL AS DANCE TEACHER/COACH, GIVING WORKSHOPS OR IMPARTING CLASSES FOR INSTITUTIONS LIKE FONTYS,
-                        AHK, ARTEZ,
-                        CODARTS, NORRDANS, ICK, HJS, AKBANK SANAT (TURKEY), NSCD (LEEDS), CAD (SEVILLE)… JUST TO NAME A
-                        FEW.
-                    </p>
-                    <p>MY WORK HAS TOURED ACROSS HOLLAND AND HAS BEEN PROGRAMMED IN THEATRES LIKE FRASCATI, MEERVAART,
-                        BELLEVUE,
-                        KORZO, NWE VORST, GRAND THEATRE, PARKTHEATRE… TO NAME A FEW. IT HAS ALSO BEEN SHOWN AT DUTCH
-                        FESTIVALS LIKE
-                        MUNDIAL, NAZOMERFESTIVAAL, BOULEVARD FESTIVAL OR THE NEDERLANDSE DANSDAGEN AMONGST OTHERS.
-                        INTERNATIONALLY,
-                        I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.</p>
-                    <p>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS). </p>
-                </div>
+                    <div class="col-12 col-md-10 col-xl-8 text-center about-text-content">
+                        <p>I HAVE ALWAYS BEEN INTERESTED IN PROCESSES AND IN THE ACT OF CREATION ITSELF.</p>
+                        <p>MY PASSION FOR MUSIC (AND MUSIC MAKING) HAS LED ME TO EXPLORING THE RELATIONSHIP BETWEEN
+                            MUSIC
+                            PRODUCTION/COMPOSITION AND CHOREOGRAPHY/MOVEMENT GENERATION. I AM LOOKING FOR A PLAYFUL
+                            BALANCE
+                            ENCOMPASSING
+                            THE FREEDOM AND THE DYNAMICS OF A CONCERT WITH THE (HIDDEN) PRECISION OF A CHOREOGRAPHED
+                            PIECE.
+                        </p>
+                        <p>I CONSIDER MY WORK TO BE ATMOSPHERIC AND IMMERSIVE. I CREATE PHYSICAL, VISUAL AND AURAL
+                            LANDSCAPES,
+                            LIKE A
+                            COLLECTION OF MOODS THAT REFLECT CURRENT SOCIO-POLITICAL ISSUES WITH SOME REFERENCES TO ART
+                            AND/OR
+                            POP
+                            CULTURE ADDED TO THE MIX.</p>
+                        <p>IN PREPARATION FOR MY UPCOMING WORK (STILL UNTITLED), AND CONTINUING THE PATH OPENED BY MY
+                            LATEST
+                            PIECE
+                            CHOREOPOP, I AM DEVELOPING A CREATIVE AND SCORING METHOD (CALLED MUSICOGRAPHY) THAT WILL
+                            SERVE
+                            AS
+                            THE
+                            GENERATOR FOR PHYSICAL/AURAL OUTCOMES.</p>
+                        <p>IN 2012/13 I PARTICIPATED IN SPAZIO, A EUROPEAN PROGRAMME FOR DANCE MAKERS. CURRENTLY I AM A
+                            SUPPORTED
+                            ARTIST AT ICK AND DANSMAKERS, BOTH LOCATED IN AMSTERDAM.</p>
+                        <p>AS A DANCER I HAVE WORKED WITH COMPANIES AND CHOREOGRAPHERS SUCH AS ICK, GALILI DANCE,
+                            ICELAND
+                            DANCE
+                            COMPANY, METROS, STEPHEN SHROPSHIRE, ANDRÉ GINGRAS, SYLVAIN EMARD AND VACLAV KUNES AMONGST
+                            OTHERS. I
+                            WORK AS
+                            WELL AS DANCE TEACHER/COACH, GIVING WORKSHOPS OR IMPARTING CLASSES FOR INSTITUTIONS LIKE
+                            FONTYS,
+                            AHK, ARTEZ,
+                            CODARTS, NORRDANS, ICK, HJS, AKBANK SANAT (TURKEY), NSCD (LEEDS), CAD (SEVILLE)… JUST TO
+                            NAME A
+                            FEW.
+                        </p>
+                        <p>MY WORK HAS TOURED ACROSS HOLLAND AND HAS BEEN PROGRAMMED IN THEATRES LIKE FRASCATI,
+                            MEERVAART,
+                            BELLEVUE,
+                            KORZO, NWE VORST, GRAND THEATRE, PARKTHEATRE… TO NAME A FEW. IT HAS ALSO BEEN SHOWN AT DUTCH
+                            FESTIVALS LIKE
+                            MUNDIAL, NAZOMERFESTIVAAL, BOULEVARD FESTIVAL OR THE NEDERLANDSE DANSDAGEN AMONGST OTHERS.
+                            INTERNATIONALLY,
+                            I HAD THE CHANCE TO SHOW IN ISTANBUL AND PREMIERE IN THE U.K.</p>
+                        <p>I WAS BORN IN THE CANARY ISLANDS (SPAIN) AND I CURRENTLY LIVE IN AMSTERDAM (NETHERLANDS).
+                        </p>
+                    </div>
 
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
     <!-- Divider 4 -->
     <div class="divider-container">
         <div class="quotation">
