changed the poster image

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                 <div class="row content-row-home justify-content-center no-gutters">
                     <div class="col-6 imagecol">
                         <div class="image-wrapper">
-                            <img src="assets/images/choreopop_cover.jpg" class="d-block w-100 h-auto" alt="First slide">
+                            <img src="assets/images/choreopopPoster.jpg" class="d-block w-100 h-auto" alt="First slide">
                         </div>
                     </div>
                     <div class="col-6 contentcol">
@@ -82,7 +82,7 @@
                             Atque illo iure libero a ipsum cum dicta inventore minima doloribus
                             totam labore,
                             architecto nulla laboriosam?</p>
-                        <button type="button" class="btn btn-link">Link</button>
+                        <button type="button" class="btn btn-link" href="actual.html">Link</button>
                     </div>
                 </div>
             </div>
